--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -1,21 +1,13 @@
-<!DOCTYPE html>
-<html lang="en" dir="ltr">
-  <head>
-    <meta charset="utf-8">
-    <title>Liam's Blog</title>
-  </head>
-  <body>
-    <header>
-      <h1><a href="/"><em>Django Girls Blog</em></a></h1>
-    </header>
+{% extends 'blog/base.html' %}
 
-    {% for post in posts %}
-      <div class="">
+{% block content %}
+  {% for post in posts %}
+    <div class="post">
+      <div class="date">
         <p>published: {{ post.published_date }}</p>
-        <h2><a href="">{{ post.title }}</a></h2>
-        <p>{{ post.text|linebreaksbr }}</p>
       </div>
-    {% endfor %}
-
-  </body>
-</html>
+      <h2><a href="{% url 'post_detail' pk=post.pk %}">{{ post.title }}</a></h2>
+      <p>{{ post.text|linebreaksbr }}</p>
+    </div>
+  {% endfor %}
+{% endblock %}
